--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 	<div>Il tuo nome è: <span id="nome"></span></div>
     <div>Il tuo cognome è: <span id="cognome"></span></div>
     <div>Il tuo colore preferto è: <span id="colore"></span></div>
-    <div><span id="totale"></span>22</div>
+    <div>La tua Password é: <span id="totale"></span>22</div>
 </body>
 </html>
